# gor_make

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  Makefile  README.md  WORKSPACE
demos/android_bp/: Android.bp
demos/android_bp/src/: math.c
demos/android_mk/: Android.mk
demos/build_gn/: BUILD.gn
demos/cmake/: CMakeLists.txt
demos/cmake/src/: main.c
demos/scons/: SConstruct
demos/scons/src/: main.cc
gor_make/: BUILD  CMakeLists.txt  main.cc
libgormake/: BUILD  CMakeLists.txt  OS.h  OSUnix.cc  RdFile.cc  RdFile.h  WrFile.cc  WrFile.h  ast.h  bp_engine.cc  bp_engine.h  bp_parser.cc  bp_parser.h  bpengine.cc  bpengine.h  bpparser.cc  bpparser.h  build_engine_base.cc  build_engine_base.h  buildenginebase.cc  buildenginebase.h  cmake_scanner.cc  cmake_scanner.h  cmakescanner.cc  cmakescanner.h  engine.cc  engine.h  gn_scanner.cc  gn_scanner.h  gnscanner.cc  gnscanner.h  gormake.h  intrp.cc  intrp.h  lexer.cc  lexer.h  line.h  macros.h  mk_scanner.cc  mk_scanner.h  (+24 more)
tools/: cpplint.py  launch_visualizer.py  skia_test.cc  skia_visualizer.cc  visualize_bp.py
